// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`presets integration "core" configuration test: deprecations 1`] = `Array []`;

exports[`presets integration "core" configuration test: invalidOptionWarnings 1`] = `Array []`;

exports[`presets integration "core" configuration test: parseErrors 1`] = `Array []`;

exports[`presets integration "core" configuration test: warnings 1`] = `
Array [
  Object {
    "column": 1,
    "line": 447,
    "rule": "at-rule-empty-line-before",
    "severity": "error",
    "text": "Expected empty line before at-rule (at-rule-empty-line-before)",
  },
  Object {
    "column": 1,
    "line": 344,
    "rule": "at-rule-no-unknown",
    "severity": "error",
    "text": "Unexpected unknown at-rule \\"@unknown\\" (at-rule-no-unknown)",
  },
  Object {
    "column": 1,
    "line": 432,
    "rule": "at-rule-no-vendor-prefix",
    "severity": "error",
    "text": "Unexpected vendor-prefixed at-rule \\"@-webkit-keyframes\\" (at-rule-no-vendor-prefix)",
  },
  Object {
    "column": 1,
    "line": 318,
    "rule": "at-rule-property-requirelist",
    "severity": "error",
    "text": "Expected property \\"src\\" for at-rule \\"font-face\\" (at-rule-property-requirelist)",
  },
  Object {
    "column": 1,
    "line": 318,
    "rule": "at-rule-property-requirelist",
    "severity": "error",
    "text": "Expected property \\"font-display\\" for at-rule \\"font-face\\" (at-rule-property-requirelist)",
  },
  Object {
    "column": 21,
    "line": 342,
    "rule": "block-closing-brace-newline-before",
    "severity": "error",
    "text": "Expected newline before \\"}\\" (block-closing-brace-newline-before)",
  },
  Object {
    "column": 16,
    "line": 449,
    "rule": "block-closing-brace-newline-before",
    "severity": "error",
    "text": "Expected newline before \\"}\\" (block-closing-brace-newline-before)",
  },
  Object {
    "column": 20,
    "line": 450,
    "rule": "block-closing-brace-newline-before",
    "severity": "error",
    "text": "Expected newline before \\"}\\" (block-closing-brace-newline-before)",
  },
  Object {
    "column": 21,
    "line": 451,
    "rule": "block-closing-brace-newline-before",
    "severity": "error",
    "text": "Expected newline before \\"}\\" (block-closing-brace-newline-before)",
  },
  Object {
    "column": 31,
    "line": 453,
    "rule": "block-closing-brace-newline-before",
    "severity": "error",
    "text": "Expected newline before \\"}\\" (block-closing-brace-newline-before)",
  },
  Object {
    "column": 52,
    "line": 454,
    "rule": "block-closing-brace-newline-before",
    "severity": "error",
    "text": "Expected newline before \\"}\\" (block-closing-brace-newline-before)",
  },
  Object {
    "column": 53,
    "line": 456,
    "rule": "block-closing-brace-newline-before",
    "severity": "error",
    "text": "Expected newline before \\"}\\" (block-closing-brace-newline-before)",
  },
  Object {
    "column": 56,
    "line": 457,
    "rule": "block-closing-brace-newline-before",
    "severity": "error",
    "text": "Expected newline before \\"}\\" (block-closing-brace-newline-before)",
  },
  Object {
    "column": 54,
    "line": 458,
    "rule": "block-closing-brace-newline-before",
    "severity": "error",
    "text": "Expected newline before \\"}\\" (block-closing-brace-newline-before)",
  },
  Object {
    "column": 52,
    "line": 459,
    "rule": "block-closing-brace-newline-before",
    "severity": "error",
    "text": "Expected newline before \\"}\\" (block-closing-brace-newline-before)",
  },
  Object {
    "column": 60,
    "line": 460,
    "rule": "block-closing-brace-newline-before",
    "severity": "error",
    "text": "Expected newline before \\"}\\" (block-closing-brace-newline-before)",
  },
  Object {
    "column": 18,
    "line": 462,
    "rule": "block-closing-brace-newline-before",
    "severity": "error",
    "text": "Expected newline before \\"}\\" (block-closing-brace-newline-before)",
  },
  Object {
    "column": 8,
    "line": 346,
    "rule": "block-no-empty",
    "severity": "error",
    "text": "Unexpected empty block (block-no-empty)",
  },
  Object {
    "column": 10,
    "line": 344,
    "rule": "block-no-empty",
    "severity": "error",
    "text": "Unexpected empty block (block-no-empty)",
  },
  Object {
    "column": 29,
    "line": 446,
    "rule": "block-no-empty",
    "severity": "error",
    "text": "Unexpected empty block (block-no-empty)",
  },
  Object {
    "column": 35,
    "line": 447,
    "rule": "block-no-empty",
    "severity": "error",
    "text": "Unexpected empty block (block-no-empty)",
  },
  Object {
    "column": 4,
    "line": 342,
    "rule": "block-opening-brace-newline-after",
    "severity": "error",
    "text": "Expected newline after \\"{\\" (block-opening-brace-newline-after)",
  },
  Object {
    "column": 4,
    "line": 449,
    "rule": "block-opening-brace-newline-after",
    "severity": "error",
    "text": "Expected newline after \\"{\\" (block-opening-brace-newline-after)",
  },
  Object {
    "column": 4,
    "line": 450,
    "rule": "block-opening-brace-newline-after",
    "severity": "error",
    "text": "Expected newline after \\"{\\" (block-opening-brace-newline-after)",
  },
  Object {
    "column": 4,
    "line": 451,
    "rule": "block-opening-brace-newline-after",
    "severity": "error",
    "text": "Expected newline after \\"{\\" (block-opening-brace-newline-after)",
  },
  Object {
    "column": 4,
    "line": 453,
    "rule": "block-opening-brace-newline-after",
    "severity": "error",
    "text": "Expected newline after \\"{\\" (block-opening-brace-newline-after)",
  },
  Object {
    "column": 4,
    "line": 454,
    "rule": "block-opening-brace-newline-after",
    "severity": "error",
    "text": "Expected newline after \\"{\\" (block-opening-brace-newline-after)",
  },
  Object {
    "column": 7,
    "line": 456,
    "rule": "block-opening-brace-newline-after",
    "severity": "error",
    "text": "Expected newline after \\"{\\" (block-opening-brace-newline-after)",
  },
  Object {
    "column": 7,
    "line": 457,
    "rule": "block-opening-brace-newline-after",
    "severity": "error",
    "text": "Expected newline after \\"{\\" (block-opening-brace-newline-after)",
  },
  Object {
    "column": 7,
    "line": 458,
    "rule": "block-opening-brace-newline-after",
    "severity": "error",
    "text": "Expected newline after \\"{\\" (block-opening-brace-newline-after)",
  },
  Object {
    "column": 7,
    "line": 459,
    "rule": "block-opening-brace-newline-after",
    "severity": "error",
    "text": "Expected newline after \\"{\\" (block-opening-brace-newline-after)",
  },
  Object {
    "column": 7,
    "line": 460,
    "rule": "block-opening-brace-newline-after",
    "severity": "error",
    "text": "Expected newline after \\"{\\" (block-opening-brace-newline-after)",
  },
  Object {
    "column": 4,
    "line": 462,
    "rule": "block-opening-brace-newline-after",
    "severity": "error",
    "text": "Expected newline after \\"{\\" (block-opening-brace-newline-after)",
  },
  Object {
    "column": 21,
    "line": 360,
    "rule": "color-hex-length",
    "severity": "error",
    "text": "Expected \\"#ffffff\\" to be \\"#fff\\" (color-hex-length)",
  },
  Object {
    "column": 13,
    "line": 13,
    "rule": "color-named",
    "severity": "error",
    "text": "Unexpected named color \\"red\\" (color-named)",
  },
  Object {
    "column": 10,
    "line": 381,
    "rule": "color-named",
    "severity": "error",
    "text": "Unexpected named color \\"black\\" (color-named)",
  },
  Object {
    "column": 39,
    "line": 404,
    "rule": "color-named",
    "severity": "error",
    "text": "Unexpected named color \\"red\\" (color-named)",
  },
  Object {
    "column": 44,
    "line": 404,
    "rule": "color-named",
    "severity": "error",
    "text": "Unexpected named color \\"green\\" (color-named)",
  },
  Object {
    "column": 51,
    "line": 404,
    "rule": "color-named",
    "severity": "error",
    "text": "Unexpected named color \\"blue\\" (color-named)",
  },
  Object {
    "column": 12,
    "line": 413,
    "rule": "color-named",
    "severity": "error",
    "text": "Unexpected named color \\"red\\" (color-named)",
  },
  Object {
    "column": 12,
    "line": 462,
    "rule": "color-named",
    "severity": "error",
    "text": "Unexpected named color \\"pink\\" (color-named)",
  },
  Object {
    "column": 12,
    "line": 449,
    "rule": "color-no-invalid-hex",
    "severity": "error",
    "text": "Unexpected invalid hex color \\"#00\\" (color-no-invalid-hex)",
  },
  Object {
    "column": 12,
    "line": 450,
    "rule": "color-no-invalid-hex",
    "severity": "error",
    "text": "Unexpected invalid hex color \\"#fff1az\\" (color-no-invalid-hex)",
  },
  Object {
    "column": 12,
    "line": 451,
    "rule": "color-no-invalid-hex",
    "severity": "error",
    "text": "Unexpected invalid hex color \\"#12345aa\\" (color-no-invalid-hex)",
  },
  Object {
    "column": 1,
    "line": 378,
    "rule": "comment-no-empty",
    "severity": "error",
    "text": "Unexpected empty comment (comment-no-empty)",
  },
  Object {
    "column": 4,
    "line": 378,
    "rule": "comment-whitespace-inside",
    "severity": "error",
    "text": "Expected whitespace after \\"/*\\" (comment-whitespace-inside)",
  },
  Object {
    "column": 1,
    "line": 378,
    "rule": "comment-whitespace-inside",
    "severity": "error",
    "text": "Expected whitespace before \\"*/\\" (comment-whitespace-inside)",
  },
  Object {
    "column": 20,
    "line": 342,
    "rule": "declaration-block-trailing-semicolon",
    "severity": "error",
    "text": "Expected a trailing semicolon (declaration-block-trailing-semicolon)",
  },
  Object {
    "column": 13,
    "line": 392,
    "rule": "declaration-block-trailing-semicolon",
    "severity": "error",
    "text": "Expected a trailing semicolon (declaration-block-trailing-semicolon)",
  },
  Object {
    "column": 12,
    "line": 408,
    "rule": "declaration-block-trailing-semicolon",
    "severity": "error",
    "text": "Expected a trailing semicolon (declaration-block-trailing-semicolon)",
  },
  Object {
    "column": 3,
    "line": 355,
    "rule": "declaration-empty-line-before",
    "severity": "error",
    "text": "Unexpected empty line before declaration (declaration-empty-line-before)",
  },
  Object {
    "column": 3,
    "line": 327,
    "rule": "declaration-property-value-blacklist",
    "severity": "error",
    "text": "Unexpected value \\"all 2s\\" for property \\"transition\\" (declaration-property-value-blacklist)",
  },
  Object {
    "column": 3,
    "line": 335,
    "rule": "declaration-property-value-blacklist",
    "severity": "error",
    "text": "Unexpected value \\"all\\" for property \\"transition-property\\" (declaration-property-value-blacklist)",
  },
  Object {
    "column": 45,
    "line": 454,
    "rule": "font-family-no-missing-generic-family-keyword",
    "severity": "error",
    "text": "Unexpected missing generic font family (font-family-no-missing-generic-family-keyword)",
  },
  Object {
    "column": 17,
    "line": 319,
    "rule": "font-family-name-quotes",
    "severity": "error",
    "text": "Unexpected quotes around \\"MyFont\\" (font-family-name-quotes)",
  },
  Object {
    "column": 25,
    "line": 453,
    "rule": "font-family-no-duplicate-names",
    "severity": "error",
    "text": "Unexpected duplicate name serif (font-family-no-duplicate-names)",
  },
  Object {
    "column": 36,
    "line": 456,
    "rule": "function-linear-gradient-no-nonstandard-direction",
    "severity": "error",
    "text": "Unexpected nonstandard direction (function-linear-gradient-no-nonstandard-direction)",
  },
  Object {
    "column": 36,
    "line": 457,
    "rule": "function-linear-gradient-no-nonstandard-direction",
    "severity": "error",
    "text": "Unexpected nonstandard direction (function-linear-gradient-no-nonstandard-direction)",
  },
  Object {
    "column": 36,
    "line": 458,
    "rule": "function-linear-gradient-no-nonstandard-direction",
    "severity": "error",
    "text": "Unexpected nonstandard direction (function-linear-gradient-no-nonstandard-direction)",
  },
  Object {
    "column": 36,
    "line": 459,
    "rule": "function-linear-gradient-no-nonstandard-direction",
    "severity": "error",
    "text": "Unexpected nonstandard direction (function-linear-gradient-no-nonstandard-direction)",
  },
  Object {
    "column": 36,
    "line": 460,
    "rule": "function-linear-gradient-no-nonstandard-direction",
    "severity": "error",
    "text": "Unexpected nonstandard direction (function-linear-gradient-no-nonstandard-direction)",
  },
  Object {
    "column": 15,
    "line": 404,
    "rule": "function-name-case",
    "severity": "error",
    "text": "Expected \\"-WEBKIT-RADIAL-GRADIENT\\" to be \\"-webkit-radial-gradient\\" (function-name-case)",
  },
  Object {
    "column": 9,
    "line": 429,
    "rule": "length-zero-no-unit",
    "severity": "error",
    "text": "Unexpected unit (length-zero-no-unit)",
  },
  Object {
    "column": 20,
    "line": 411,
    "rule": "media-feature-name-blacklist",
    "severity": "error",
    "text": "Unexpected media feature name \\"max-device-width\\" (media-feature-name-blacklist)",
  },
  Object {
    "column": 20,
    "line": 417,
    "rule": "media-feature-name-blacklist",
    "severity": "error",
    "text": "Unexpected media feature name \\"MIN-DEVICE-ASPECT-RATIO\\" (media-feature-name-blacklist)",
  },
  Object {
    "column": 20,
    "line": 417,
    "rule": "media-feature-name-case",
    "severity": "error",
    "text": "Expected \\"MIN-DEVICE-ASPECT-RATIO\\" to be \\"min-device-aspect-ratio\\" (media-feature-name-case)",
  },
  Object {
    "column": 20,
    "line": 446,
    "rule": "media-feature-name-no-unknown",
    "severity": "error",
    "text": "Unexpected unknown media feature name \\"unknown\\" (media-feature-name-no-unknown)",
  },
  Object {
    "column": 20,
    "line": 447,
    "rule": "media-feature-name-no-unknown",
    "severity": "error",
    "text": "Unexpected unknown media feature name \\"unknown\\" (media-feature-name-no-unknown)",
  },
  Object {
    "column": 1,
    "line": 326,
    "rule": "no-duplicate-selectors",
    "severity": "error",
    "text": "Unexpected duplicate selector \\".transition-1\\", first used at line 322 (no-duplicate-selectors)",
  },
  Object {
    "column": 1,
    "line": 342,
    "rule": "no-duplicate-selectors",
    "severity": "error",
    "text": "Unexpected duplicate selector \\"a\\", first used at line 338 (no-duplicate-selectors)",
  },
  Object {
    "column": 1,
    "line": 363,
    "rule": "no-duplicate-selectors",
    "severity": "error",
    "text": "Unexpected duplicate selector \\"a\\", first used at line 338 (no-duplicate-selectors)",
  },
  Object {
    "column": 1,
    "line": 380,
    "rule": "no-duplicate-selectors",
    "severity": "error",
    "text": "Unexpected duplicate selector \\"a\\", first used at line 338 (no-duplicate-selectors)",
  },
  Object {
    "column": 1,
    "line": 384,
    "rule": "no-duplicate-selectors",
    "severity": "error",
    "text": "Unexpected duplicate selector \\"a\\", first used at line 338 (no-duplicate-selectors)",
  },
  Object {
    "column": 1,
    "line": 403,
    "rule": "no-duplicate-selectors",
    "severity": "error",
    "text": "Unexpected duplicate selector \\"a\\", first used at line 338 (no-duplicate-selectors)",
  },
  Object {
    "column": 1,
    "line": 407,
    "rule": "no-duplicate-selectors",
    "severity": "error",
    "text": "Unexpected duplicate selector \\"a\\", first used at line 338 (no-duplicate-selectors)",
  },
  Object {
    "column": 1,
    "line": 428,
    "rule": "no-duplicate-selectors",
    "severity": "error",
    "text": "Unexpected duplicate selector \\"a\\", first used at line 338 (no-duplicate-selectors)",
  },
  Object {
    "column": 1,
    "line": 449,
    "rule": "no-duplicate-selectors",
    "severity": "error",
    "text": "Unexpected duplicate selector \\"a\\", first used at line 338 (no-duplicate-selectors)",
  },
  Object {
    "column": 1,
    "line": 450,
    "rule": "no-duplicate-selectors",
    "severity": "error",
    "text": "Unexpected duplicate selector \\"a\\", first used at line 338 (no-duplicate-selectors)",
  },
  Object {
    "column": 1,
    "line": 451,
    "rule": "no-duplicate-selectors",
    "severity": "error",
    "text": "Unexpected duplicate selector \\"a\\", first used at line 338 (no-duplicate-selectors)",
  },
  Object {
    "column": 1,
    "line": 453,
    "rule": "no-duplicate-selectors",
    "severity": "error",
    "text": "Unexpected duplicate selector \\"a\\", first used at line 338 (no-duplicate-selectors)",
  },
  Object {
    "column": 1,
    "line": 454,
    "rule": "no-duplicate-selectors",
    "severity": "error",
    "text": "Unexpected duplicate selector \\"a\\", first used at line 338 (no-duplicate-selectors)",
  },
  Object {
    "column": 1,
    "line": 456,
    "rule": "no-duplicate-selectors",
    "severity": "error",
    "text": "Unexpected duplicate selector \\".foo\\", first used at line 229 (no-duplicate-selectors)",
  },
  Object {
    "column": 1,
    "line": 457,
    "rule": "no-duplicate-selectors",
    "severity": "error",
    "text": "Unexpected duplicate selector \\".foo\\", first used at line 229 (no-duplicate-selectors)",
  },
  Object {
    "column": 1,
    "line": 458,
    "rule": "no-duplicate-selectors",
    "severity": "error",
    "text": "Unexpected duplicate selector \\".foo\\", first used at line 229 (no-duplicate-selectors)",
  },
  Object {
    "column": 1,
    "line": 459,
    "rule": "no-duplicate-selectors",
    "severity": "error",
    "text": "Unexpected duplicate selector \\".foo\\", first used at line 229 (no-duplicate-selectors)",
  },
  Object {
    "column": 1,
    "line": 460,
    "rule": "no-duplicate-selectors",
    "severity": "error",
    "text": "Unexpected duplicate selector \\".foo\\", first used at line 229 (no-duplicate-selectors)",
  },
  Object {
    "column": 1,
    "line": 462,
    "rule": "no-duplicate-selectors",
    "severity": "error",
    "text": "Unexpected duplicate selector \\"a\\", first used at line 338 (no-duplicate-selectors)",
  },
  Object {
    "column": 17,
    "line": 462,
    "rule": "no-extra-semicolons",
    "severity": "error",
    "text": "Unexpected extra semicolon (no-extra-semicolons)",
  },
  Object {
    "column": 8,
    "line": 339,
    "rule": "number-leading-zero",
    "severity": "error",
    "text": "Expected a leading zero (number-leading-zero)",
  },
  Object {
    "column": 10,
    "line": 390,
    "rule": "number-leading-zero",
    "severity": "error",
    "text": "Expected a leading zero (number-leading-zero)",
  },
  Object {
    "column": 8,
    "line": 424,
    "rule": "number-max-precision",
    "severity": "error",
    "text": "Expected \\"3.24563412312312\\" to be \\"3.24563412\\" (number-max-precision)",
  },
  Object {
    "column": 11,
    "line": 389,
    "rule": "number-no-trailing-zeros",
    "severity": "error",
    "text": "Unexpected trailing zero(s) (number-no-trailing-zeros)",
  },
  Object {
    "column": 3,
    "line": 408,
    "rule": "property-case",
    "severity": "error",
    "text": "Expected \\"WIDTH\\" to be \\"width\\" (property-case)",
  },
  Object {
    "column": 3,
    "line": 13,
    "rule": "property-no-unknown",
    "severity": "error",
    "text": "Unexpected unknown property \\"composes\\" (property-no-unknown)",
  },
  Object {
    "column": 5,
    "line": 342,
    "rule": "property-no-unknown",
    "severity": "error",
    "text": "Unexpected unknown property \\"unknown\\" (property-no-unknown)",
  },
  Object {
    "column": 1,
    "line": 347,
    "rule": "rule-empty-line-before",
    "severity": "error",
    "text": "Expected empty line before rule (rule-empty-line-before)",
  },
  Object {
    "column": 1,
    "line": 450,
    "rule": "rule-empty-line-before",
    "severity": "error",
    "text": "Expected empty line before rule (rule-empty-line-before)",
  },
  Object {
    "column": 1,
    "line": 451,
    "rule": "rule-empty-line-before",
    "severity": "error",
    "text": "Expected empty line before rule (rule-empty-line-before)",
  },
  Object {
    "column": 1,
    "line": 454,
    "rule": "rule-empty-line-before",
    "severity": "error",
    "text": "Expected empty line before rule (rule-empty-line-before)",
  },
  Object {
    "column": 1,
    "line": 457,
    "rule": "rule-empty-line-before",
    "severity": "error",
    "text": "Expected empty line before rule (rule-empty-line-before)",
  },
  Object {
    "column": 1,
    "line": 458,
    "rule": "rule-empty-line-before",
    "severity": "error",
    "text": "Expected empty line before rule (rule-empty-line-before)",
  },
  Object {
    "column": 1,
    "line": 459,
    "rule": "rule-empty-line-before",
    "severity": "error",
    "text": "Expected empty line before rule (rule-empty-line-before)",
  },
  Object {
    "column": 1,
    "line": 460,
    "rule": "rule-empty-line-before",
    "severity": "error",
    "text": "Expected empty line before rule (rule-empty-line-before)",
  },
  Object {
    "column": 2,
    "line": 438,
    "rule": "selector-pseudo-class-no-unknown",
    "severity": "error",
    "text": "Unexpected unknown pseudo-class selector \\":unknown\\" (selector-pseudo-class-no-unknown)",
  },
  Object {
    "column": 2,
    "line": 442,
    "rule": "selector-pseudo-element-no-unknown",
    "severity": "error",
    "text": "Unexpected unknown pseudo-element selector \\"::unknown\\" (selector-pseudo-element-no-unknown)",
  },
  Object {
    "column": 1,
    "line": 423,
    "rule": "selector-type-no-unknown",
    "severity": "error",
    "text": "Unexpected unknown type selector \\"number\\" (selector-type-no-unknown)",
  },
  Object {
    "column": 12,
    "line": 400,
    "rule": "string-quotes",
    "severity": "error",
    "text": "Expected double quotes (string-quotes)",
  },
  Object {
    "column": 27,
    "line": 364,
    "rule": "time-min-milliseconds",
    "severity": "error",
    "text": "Expected a minimum of 100 milliseconds (time-min-milliseconds)",
  },
  Object {
    "column": 11,
    "line": 369,
    "rule": "unit-blacklist",
    "severity": "error",
    "text": "Unexpected unit \\"in\\" (unit-blacklist)",
  },
  Object {
    "column": 27,
    "line": 364,
    "rule": "unit-case",
    "severity": "error",
    "text": "Expected \\"MS\\" to be \\"ms\\" (unit-case)",
  },
  Object {
    "column": 32,
    "line": 364,
    "rule": "value-keyword-case",
    "severity": "error",
    "text": "Expected \\"LINEAR\\" to be \\"linear\\" (value-keyword-case)",
  },
  Object {
    "column": 12,
    "line": 385,
    "rule": "value-no-vendor-prefix",
    "severity": "error",
    "text": "Unexpected vendor-prefix \\"-webkit-flex\\" (value-no-vendor-prefix)",
  },
  Object {
    "column": 15,
    "line": 404,
    "rule": "value-no-vendor-prefix",
    "severity": "error",
    "text": "Unexpected vendor-prefix \\"-WEBKIT-RADIAL-GRADIENT\\" (value-no-vendor-prefix)",
  },
]
`;

exports[`presets integration "css" configuration test: deprecations 1`] = `Array []`;

exports[`presets integration "css" configuration test: invalidOptionWarnings 1`] = `Array []`;

exports[`presets integration "css" configuration test: parseErrors 1`] = `Array []`;

exports[`presets integration "css" configuration test: warnings 1`] = `
Array [
  Object {
    "column": 1,
    "line": 447,
    "rule": "at-rule-empty-line-before",
    "severity": "error",
    "text": "Expected empty line before at-rule (at-rule-empty-line-before)",
  },
  Object {
    "column": 1,
    "line": 344,
    "rule": "at-rule-no-unknown",
    "severity": "error",
    "text": "Unexpected unknown at-rule \\"@unknown\\" (at-rule-no-unknown)",
  },
  Object {
    "column": 1,
    "line": 432,
    "rule": "at-rule-no-vendor-prefix",
    "severity": "error",
    "text": "Unexpected vendor-prefixed at-rule \\"@-webkit-keyframes\\" (at-rule-no-vendor-prefix)",
  },
  Object {
    "column": 1,
    "line": 318,
    "rule": "at-rule-property-requirelist",
    "severity": "error",
    "text": "Expected property \\"src\\" for at-rule \\"font-face\\" (at-rule-property-requirelist)",
  },
  Object {
    "column": 1,
    "line": 318,
    "rule": "at-rule-property-requirelist",
    "severity": "error",
    "text": "Expected property \\"font-display\\" for at-rule \\"font-face\\" (at-rule-property-requirelist)",
  },
  Object {
    "column": 21,
    "line": 342,
    "rule": "block-closing-brace-newline-before",
    "severity": "error",
    "text": "Expected newline before \\"}\\" (block-closing-brace-newline-before)",
  },
  Object {
    "column": 16,
    "line": 449,
    "rule": "block-closing-brace-newline-before",
    "severity": "error",
    "text": "Expected newline before \\"}\\" (block-closing-brace-newline-before)",
  },
  Object {
    "column": 20,
    "line": 450,
    "rule": "block-closing-brace-newline-before",
    "severity": "error",
    "text": "Expected newline before \\"}\\" (block-closing-brace-newline-before)",
  },
  Object {
    "column": 21,
    "line": 451,
    "rule": "block-closing-brace-newline-before",
    "severity": "error",
    "text": "Expected newline before \\"}\\" (block-closing-brace-newline-before)",
  },
  Object {
    "column": 31,
    "line": 453,
    "rule": "block-closing-brace-newline-before",
    "severity": "error",
    "text": "Expected newline before \\"}\\" (block-closing-brace-newline-before)",
  },
  Object {
    "column": 52,
    "line": 454,
    "rule": "block-closing-brace-newline-before",
    "severity": "error",
    "text": "Expected newline before \\"}\\" (block-closing-brace-newline-before)",
  },
  Object {
    "column": 53,
    "line": 456,
    "rule": "block-closing-brace-newline-before",
    "severity": "error",
    "text": "Expected newline before \\"}\\" (block-closing-brace-newline-before)",
  },
  Object {
    "column": 56,
    "line": 457,
    "rule": "block-closing-brace-newline-before",
    "severity": "error",
    "text": "Expected newline before \\"}\\" (block-closing-brace-newline-before)",
  },
  Object {
    "column": 54,
    "line": 458,
    "rule": "block-closing-brace-newline-before",
    "severity": "error",
    "text": "Expected newline before \\"}\\" (block-closing-brace-newline-before)",
  },
  Object {
    "column": 52,
    "line": 459,
    "rule": "block-closing-brace-newline-before",
    "severity": "error",
    "text": "Expected newline before \\"}\\" (block-closing-brace-newline-before)",
  },
  Object {
    "column": 60,
    "line": 460,
    "rule": "block-closing-brace-newline-before",
    "severity": "error",
    "text": "Expected newline before \\"}\\" (block-closing-brace-newline-before)",
  },
  Object {
    "column": 18,
    "line": 462,
    "rule": "block-closing-brace-newline-before",
    "severity": "error",
    "text": "Expected newline before \\"}\\" (block-closing-brace-newline-before)",
  },
  Object {
    "column": 8,
    "line": 346,
    "rule": "block-no-empty",
    "severity": "error",
    "text": "Unexpected empty block (block-no-empty)",
  },
  Object {
    "column": 10,
    "line": 344,
    "rule": "block-no-empty",
    "severity": "error",
    "text": "Unexpected empty block (block-no-empty)",
  },
  Object {
    "column": 29,
    "line": 446,
    "rule": "block-no-empty",
    "severity": "error",
    "text": "Unexpected empty block (block-no-empty)",
  },
  Object {
    "column": 35,
    "line": 447,
    "rule": "block-no-empty",
    "severity": "error",
    "text": "Unexpected empty block (block-no-empty)",
  },
  Object {
    "column": 4,
    "line": 342,
    "rule": "block-opening-brace-newline-after",
    "severity": "error",
    "text": "Expected newline after \\"{\\" (block-opening-brace-newline-after)",
  },
  Object {
    "column": 4,
    "line": 449,
    "rule": "block-opening-brace-newline-after",
    "severity": "error",
    "text": "Expected newline after \\"{\\" (block-opening-brace-newline-after)",
  },
  Object {
    "column": 4,
    "line": 450,
    "rule": "block-opening-brace-newline-after",
    "severity": "error",
    "text": "Expected newline after \\"{\\" (block-opening-brace-newline-after)",
  },
  Object {
    "column": 4,
    "line": 451,
    "rule": "block-opening-brace-newline-after",
    "severity": "error",
    "text": "Expected newline after \\"{\\" (block-opening-brace-newline-after)",
  },
  Object {
    "column": 4,
    "line": 453,
    "rule": "block-opening-brace-newline-after",
    "severity": "error",
    "text": "Expected newline after \\"{\\" (block-opening-brace-newline-after)",
  },
  Object {
    "column": 4,
    "line": 454,
    "rule": "block-opening-brace-newline-after",
    "severity": "error",
    "text": "Expected newline after \\"{\\" (block-opening-brace-newline-after)",
  },
  Object {
    "column": 7,
    "line": 456,
    "rule": "block-opening-brace-newline-after",
    "severity": "error",
    "text": "Expected newline after \\"{\\" (block-opening-brace-newline-after)",
  },
  Object {
    "column": 7,
    "line": 457,
    "rule": "block-opening-brace-newline-after",
    "severity": "error",
    "text": "Expected newline after \\"{\\" (block-opening-brace-newline-after)",
  },
  Object {
    "column": 7,
    "line": 458,
    "rule": "block-opening-brace-newline-after",
    "severity": "error",
    "text": "Expected newline after \\"{\\" (block-opening-brace-newline-after)",
  },
  Object {
    "column": 7,
    "line": 459,
    "rule": "block-opening-brace-newline-after",
    "severity": "error",
    "text": "Expected newline after \\"{\\" (block-opening-brace-newline-after)",
  },
  Object {
    "column": 7,
    "line": 460,
    "rule": "block-opening-brace-newline-after",
    "severity": "error",
    "text": "Expected newline after \\"{\\" (block-opening-brace-newline-after)",
  },
  Object {
    "column": 4,
    "line": 462,
    "rule": "block-opening-brace-newline-after",
    "severity": "error",
    "text": "Expected newline after \\"{\\" (block-opening-brace-newline-after)",
  },
  Object {
    "column": 21,
    "line": 360,
    "rule": "color-hex-length",
    "severity": "error",
    "text": "Expected \\"#ffffff\\" to be \\"#fff\\" (color-hex-length)",
  },
  Object {
    "column": 13,
    "line": 13,
    "rule": "color-named",
    "severity": "error",
    "text": "Unexpected named color \\"red\\" (color-named)",
  },
  Object {
    "column": 10,
    "line": 381,
    "rule": "color-named",
    "severity": "error",
    "text": "Unexpected named color \\"black\\" (color-named)",
  },
  Object {
    "column": 39,
    "line": 404,
    "rule": "color-named",
    "severity": "error",
    "text": "Unexpected named color \\"red\\" (color-named)",
  },
  Object {
    "column": 44,
    "line": 404,
    "rule": "color-named",
    "severity": "error",
    "text": "Unexpected named color \\"green\\" (color-named)",
  },
  Object {
    "column": 51,
    "line": 404,
    "rule": "color-named",
    "severity": "error",
    "text": "Unexpected named color \\"blue\\" (color-named)",
  },
  Object {
    "column": 12,
    "line": 413,
    "rule": "color-named",
    "severity": "error",
    "text": "Unexpected named color \\"red\\" (color-named)",
  },
  Object {
    "column": 12,
    "line": 462,
    "rule": "color-named",
    "severity": "error",
    "text": "Unexpected named color \\"pink\\" (color-named)",
  },
  Object {
    "column": 12,
    "line": 449,
    "rule": "color-no-invalid-hex",
    "severity": "error",
    "text": "Unexpected invalid hex color \\"#00\\" (color-no-invalid-hex)",
  },
  Object {
    "column": 12,
    "line": 450,
    "rule": "color-no-invalid-hex",
    "severity": "error",
    "text": "Unexpected invalid hex color \\"#fff1az\\" (color-no-invalid-hex)",
  },
  Object {
    "column": 12,
    "line": 451,
    "rule": "color-no-invalid-hex",
    "severity": "error",
    "text": "Unexpected invalid hex color \\"#12345aa\\" (color-no-invalid-hex)",
  },
  Object {
    "column": 1,
    "line": 378,
    "rule": "comment-no-empty",
    "severity": "error",
    "text": "Unexpected empty comment (comment-no-empty)",
  },
  Object {
    "column": 4,
    "line": 378,
    "rule": "comment-whitespace-inside",
    "severity": "error",
    "text": "Expected whitespace after \\"/*\\" (comment-whitespace-inside)",
  },
  Object {
    "column": 1,
    "line": 378,
    "rule": "comment-whitespace-inside",
    "severity": "error",
    "text": "Expected whitespace before \\"*/\\" (comment-whitespace-inside)",
  },
  Object {
    "column": 20,
    "line": 342,
    "rule": "declaration-block-trailing-semicolon",
    "severity": "error",
    "text": "Expected a trailing semicolon (declaration-block-trailing-semicolon)",
  },
  Object {
    "column": 13,
    "line": 392,
    "rule": "declaration-block-trailing-semicolon",
    "severity": "error",
    "text": "Expected a trailing semicolon (declaration-block-trailing-semicolon)",
  },
  Object {
    "column": 12,
    "line": 408,
    "rule": "declaration-block-trailing-semicolon",
    "severity": "error",
    "text": "Expected a trailing semicolon (declaration-block-trailing-semicolon)",
  },
  Object {
    "column": 3,
    "line": 355,
    "rule": "declaration-empty-line-before",
    "severity": "error",
    "text": "Unexpected empty line before declaration (declaration-empty-line-before)",
  },
  Object {
    "column": 3,
    "line": 327,
    "rule": "declaration-property-value-blacklist",
    "severity": "error",
    "text": "Unexpected value \\"all 2s\\" for property \\"transition\\" (declaration-property-value-blacklist)",
  },
  Object {
    "column": 3,
    "line": 335,
    "rule": "declaration-property-value-blacklist",
    "severity": "error",
    "text": "Unexpected value \\"all\\" for property \\"transition-property\\" (declaration-property-value-blacklist)",
  },
  Object {
    "column": 45,
    "line": 454,
    "rule": "font-family-no-missing-generic-family-keyword",
    "severity": "error",
    "text": "Unexpected missing generic font family (font-family-no-missing-generic-family-keyword)",
  },
  Object {
    "column": 17,
    "line": 319,
    "rule": "font-family-name-quotes",
    "severity": "error",
    "text": "Unexpected quotes around \\"MyFont\\" (font-family-name-quotes)",
  },
  Object {
    "column": 25,
    "line": 453,
    "rule": "font-family-no-duplicate-names",
    "severity": "error",
    "text": "Unexpected duplicate name serif (font-family-no-duplicate-names)",
  },
  Object {
    "column": 36,
    "line": 456,
    "rule": "function-linear-gradient-no-nonstandard-direction",
    "severity": "error",
    "text": "Unexpected nonstandard direction (function-linear-gradient-no-nonstandard-direction)",
  },
  Object {
    "column": 36,
    "line": 457,
    "rule": "function-linear-gradient-no-nonstandard-direction",
    "severity": "error",
    "text": "Unexpected nonstandard direction (function-linear-gradient-no-nonstandard-direction)",
  },
  Object {
    "column": 36,
    "line": 458,
    "rule": "function-linear-gradient-no-nonstandard-direction",
    "severity": "error",
    "text": "Unexpected nonstandard direction (function-linear-gradient-no-nonstandard-direction)",
  },
  Object {
    "column": 36,
    "line": 459,
    "rule": "function-linear-gradient-no-nonstandard-direction",
    "severity": "error",
    "text": "Unexpected nonstandard direction (function-linear-gradient-no-nonstandard-direction)",
  },
  Object {
    "column": 36,
    "line": 460,
    "rule": "function-linear-gradient-no-nonstandard-direction",
    "severity": "error",
    "text": "Unexpected nonstandard direction (function-linear-gradient-no-nonstandard-direction)",
  },
  Object {
    "column": 15,
    "line": 404,
    "rule": "function-name-case",
    "severity": "error",
    "text": "Expected \\"-WEBKIT-RADIAL-GRADIENT\\" to be \\"-webkit-radial-gradient\\" (function-name-case)",
  },
  Object {
    "column": 9,
    "line": 429,
    "rule": "length-zero-no-unit",
    "severity": "error",
    "text": "Unexpected unit (length-zero-no-unit)",
  },
  Object {
    "column": 20,
    "line": 411,
    "rule": "media-feature-name-blacklist",
    "severity": "error",
    "text": "Unexpected media feature name \\"max-device-width\\" (media-feature-name-blacklist)",
  },
  Object {
    "column": 20,
    "line": 417,
    "rule": "media-feature-name-blacklist",
    "severity": "error",
    "text": "Unexpected media feature name \\"MIN-DEVICE-ASPECT-RATIO\\" (media-feature-name-blacklist)",
  },
  Object {
    "column": 20,
    "line": 417,
    "rule": "media-feature-name-case",
    "severity": "error",
    "text": "Expected \\"MIN-DEVICE-ASPECT-RATIO\\" to be \\"min-device-aspect-ratio\\" (media-feature-name-case)",
  },
  Object {
    "column": 20,
    "line": 446,
    "rule": "media-feature-name-no-unknown",
    "severity": "error",
    "text": "Unexpected unknown media feature name \\"unknown\\" (media-feature-name-no-unknown)",
  },
  Object {
    "column": 20,
    "line": 447,
    "rule": "media-feature-name-no-unknown",
    "severity": "error",
    "text": "Unexpected unknown media feature name \\"unknown\\" (media-feature-name-no-unknown)",
  },
  Object {
    "column": 1,
    "line": 326,
    "rule": "no-duplicate-selectors",
    "severity": "error",
    "text": "Unexpected duplicate selector \\".transition-1\\", first used at line 322 (no-duplicate-selectors)",
  },
  Object {
    "column": 1,
    "line": 342,
    "rule": "no-duplicate-selectors",
    "severity": "error",
    "text": "Unexpected duplicate selector \\"a\\", first used at line 338 (no-duplicate-selectors)",
  },
  Object {
    "column": 1,
    "line": 363,
    "rule": "no-duplicate-selectors",
    "severity": "error",
    "text": "Unexpected duplicate selector \\"a\\", first used at line 338 (no-duplicate-selectors)",
  },
  Object {
    "column": 1,
    "line": 380,
    "rule": "no-duplicate-selectors",
    "severity": "error",
    "text": "Unexpected duplicate selector \\"a\\", first used at line 338 (no-duplicate-selectors)",
  },
  Object {
    "column": 1,
    "line": 384,
    "rule": "no-duplicate-selectors",
    "severity": "error",
    "text": "Unexpected duplicate selector \\"a\\", first used at line 338 (no-duplicate-selectors)",
  },
  Object {
    "column": 1,
    "line": 403,
    "rule": "no-duplicate-selectors",
    "severity": "error",
    "text": "Unexpected duplicate selector \\"a\\", first used at line 338 (no-duplicate-selectors)",
  },
  Object {
    "column": 1,
    "line": 407,
    "rule": "no-duplicate-selectors",
    "severity": "error",
    "text": "Unexpected duplicate selector \\"a\\", first used at line 338 (no-duplicate-selectors)",
  },
  Object {
    "column": 1,
    "line": 428,
    "rule": "no-duplicate-selectors",
    "severity": "error",
    "text": "Unexpected duplicate selector \\"a\\", first used at line 338 (no-duplicate-selectors)",
  },
  Object {
    "column": 1,
    "line": 449,
    "rule": "no-duplicate-selectors",
    "severity": "error",
    "text": "Unexpected duplicate selector \\"a\\", first used at line 338 (no-duplicate-selectors)",
  },
  Object {
    "column": 1,
    "line": 450,
    "rule": "no-duplicate-selectors",
    "severity": "error",
    "text": "Unexpected duplicate selector \\"a\\", first used at line 338 (no-duplicate-selectors)",
  },
  Object {
    "column": 1,
    "line": 451,
    "rule": "no-duplicate-selectors",
    "severity": "error",
    "text": "Unexpected duplicate selector \\"a\\", first used at line 338 (no-duplicate-selectors)",
  },
  Object {
    "column": 1,
    "line": 453,
    "rule": "no-duplicate-selectors",
    "severity": "error",
    "text": "Unexpected duplicate selector \\"a\\", first used at line 338 (no-duplicate-selectors)",
  },
  Object {
    "column": 1,
    "line": 454,
    "rule": "no-duplicate-selectors",
    "severity": "error",
    "text": "Unexpected duplicate selector \\"a\\", first used at line 338 (no-duplicate-selectors)",
  },
  Object {
    "column": 1,
    "line": 456,
    "rule": "no-duplicate-selectors",
    "severity": "error",
    "text": "Unexpected duplicate selector \\".foo\\", first used at line 229 (no-duplicate-selectors)",
  },
  Object {
    "column": 1,
    "line": 457,
    "rule": "no-duplicate-selectors",
    "severity": "error",
    "text": "Unexpected duplicate selector \\".foo\\", first used at line 229 (no-duplicate-selectors)",
  },
  Object {
    "column": 1,
    "line": 458,
    "rule": "no-duplicate-selectors",
    "severity": "error",
    "text": "Unexpected duplicate selector \\".foo\\", first used at line 229 (no-duplicate-selectors)",
  },
  Object {
    "column": 1,
    "line": 459,
    "rule": "no-duplicate-selectors",
    "severity": "error",
    "text": "Unexpected duplicate selector \\".foo\\", first used at line 229 (no-duplicate-selectors)",
  },
  Object {
    "column": 1,
    "line": 460,
    "rule": "no-duplicate-selectors",
    "severity": "error",
    "text": "Unexpected duplicate selector \\".foo\\", first used at line 229 (no-duplicate-selectors)",
  },
  Object {
    "column": 1,
    "line": 462,
    "rule": "no-duplicate-selectors",
    "severity": "error",
    "text": "Unexpected duplicate selector \\"a\\", first used at line 338 (no-duplicate-selectors)",
  },
  Object {
    "column": 17,
    "line": 462,
    "rule": "no-extra-semicolons",
    "severity": "error",
    "text": "Unexpected extra semicolon (no-extra-semicolons)",
  },
  Object {
    "column": 8,
    "line": 339,
    "rule": "number-leading-zero",
    "severity": "error",
    "text": "Expected a leading zero (number-leading-zero)",
  },
  Object {
    "column": 10,
    "line": 390,
    "rule": "number-leading-zero",
    "severity": "error",
    "text": "Expected a leading zero (number-leading-zero)",
  },
  Object {
    "column": 8,
    "line": 424,
    "rule": "number-max-precision",
    "severity": "error",
    "text": "Expected \\"3.24563412312312\\" to be \\"3.24563412\\" (number-max-precision)",
  },
  Object {
    "column": 11,
    "line": 389,
    "rule": "number-no-trailing-zeros",
    "severity": "error",
    "text": "Unexpected trailing zero(s) (number-no-trailing-zeros)",
  },
  Object {
    "column": 3,
    "line": 408,
    "rule": "property-case",
    "severity": "error",
    "text": "Expected \\"WIDTH\\" to be \\"width\\" (property-case)",
  },
  Object {
    "column": 3,
    "line": 13,
    "rule": "property-no-unknown",
    "severity": "error",
    "text": "Unexpected unknown property \\"composes\\" (property-no-unknown)",
  },
  Object {
    "column": 5,
    "line": 342,
    "rule": "property-no-unknown",
    "severity": "error",
    "text": "Unexpected unknown property \\"unknown\\" (property-no-unknown)",
  },
  Object {
    "column": 1,
    "line": 347,
    "rule": "rule-empty-line-before",
    "severity": "error",
    "text": "Expected empty line before rule (rule-empty-line-before)",
  },
  Object {
    "column": 1,
    "line": 450,
    "rule": "rule-empty-line-before",
    "severity": "error",
    "text": "Expected empty line before rule (rule-empty-line-before)",
  },
  Object {
    "column": 1,
    "line": 451,
    "rule": "rule-empty-line-before",
    "severity": "error",
    "text": "Expected empty line before rule (rule-empty-line-before)",
  },
  Object {
    "column": 1,
    "line": 454,
    "rule": "rule-empty-line-before",
    "severity": "error",
    "text": "Expected empty line before rule (rule-empty-line-before)",
  },
  Object {
    "column": 1,
    "line": 457,
    "rule": "rule-empty-line-before",
    "severity": "error",
    "text": "Expected empty line before rule (rule-empty-line-before)",
  },
  Object {
    "column": 1,
    "line": 458,
    "rule": "rule-empty-line-before",
    "severity": "error",
    "text": "Expected empty line before rule (rule-empty-line-before)",
  },
  Object {
    "column": 1,
    "line": 459,
    "rule": "rule-empty-line-before",
    "severity": "error",
    "text": "Expected empty line before rule (rule-empty-line-before)",
  },
  Object {
    "column": 1,
    "line": 460,
    "rule": "rule-empty-line-before",
    "severity": "error",
    "text": "Expected empty line before rule (rule-empty-line-before)",
  },
  Object {
    "column": 2,
    "line": 438,
    "rule": "selector-pseudo-class-no-unknown",
    "severity": "error",
    "text": "Unexpected unknown pseudo-class selector \\":unknown\\" (selector-pseudo-class-no-unknown)",
  },
  Object {
    "column": 2,
    "line": 442,
    "rule": "selector-pseudo-element-no-unknown",
    "severity": "error",
    "text": "Unexpected unknown pseudo-element selector \\"::unknown\\" (selector-pseudo-element-no-unknown)",
  },
  Object {
    "column": 1,
    "line": 423,
    "rule": "selector-type-no-unknown",
    "severity": "error",
    "text": "Unexpected unknown type selector \\"number\\" (selector-type-no-unknown)",
  },
  Object {
    "column": 12,
    "line": 400,
    "rule": "string-quotes",
    "severity": "error",
    "text": "Expected double quotes (string-quotes)",
  },
  Object {
    "column": 27,
    "line": 364,
    "rule": "time-min-milliseconds",
    "severity": "error",
    "text": "Expected a minimum of 100 milliseconds (time-min-milliseconds)",
  },
  Object {
    "column": 11,
    "line": 369,
    "rule": "unit-blacklist",
    "severity": "error",
    "text": "Unexpected unit \\"in\\" (unit-blacklist)",
  },
  Object {
    "column": 27,
    "line": 364,
    "rule": "unit-case",
    "severity": "error",
    "text": "Expected \\"MS\\" to be \\"ms\\" (unit-case)",
  },
  Object {
    "column": 32,
    "line": 364,
    "rule": "value-keyword-case",
    "severity": "error",
    "text": "Expected \\"LINEAR\\" to be \\"linear\\" (value-keyword-case)",
  },
  Object {
    "column": 12,
    "line": 385,
    "rule": "value-no-vendor-prefix",
    "severity": "error",
    "text": "Unexpected vendor-prefix \\"-webkit-flex\\" (value-no-vendor-prefix)",
  },
  Object {
    "column": 15,
    "line": 404,
    "rule": "value-no-vendor-prefix",
    "severity": "error",
    "text": "Unexpected vendor-prefix \\"-WEBKIT-RADIAL-GRADIENT\\" (value-no-vendor-prefix)",
  },
]
`;

exports[`presets integration "scss" configuration test: deprecations 1`] = `Array []`;

exports[`presets integration "scss" configuration test: invalidOptionWarnings 1`] = `Array []`;

exports[`presets integration "scss" configuration test: parseErrors 1`] = `Array []`;

exports[`presets integration "scss" configuration test: warnings 1`] = `
Array [
  Object {
    "column": 23,
    "line": 4,
    "rule": "scss/at-import-partial-extension",
    "severity": "error",
    "text": "Unexpected extension \\".scss\\" in @import (scss/at-import-partial-extension)",
  },
  Object {
    "column": 23,
    "line": 4,
    "rule": "scss/at-import-partial-extension-blacklist",
    "severity": "error",
    "text": "Unexpected extension \\".scss\\" in imported partial name (scss/at-import-partial-extension-blacklist)",
  },
  Object {
    "column": 47,
    "line": 149,
    "rule": "scss/operator-no-unspaced",
    "severity": "error",
    "text": "Expected single space before \\"/\\" (scss/operator-no-unspaced)",
  },
  Object {
    "column": 47,
    "line": 149,
    "rule": "scss/operator-no-unspaced",
    "severity": "error",
    "text": "Expected single space after \\"/\\" (scss/operator-no-unspaced)",
  },
  Object {
    "column": 1,
    "line": 179,
    "rule": "at-rule-empty-line-before",
    "severity": "error",
    "text": "Expected empty line before at-rule (at-rule-empty-line-before)",
  },
  Object {
    "column": 1,
    "line": 72,
    "rule": "at-rule-no-unknown",
    "severity": "error",
    "text": "Unexpected unknown at-rule \\"@unknown\\" (at-rule-no-unknown)",
  },
  Object {
    "column": 1,
    "line": 164,
    "rule": "at-rule-no-vendor-prefix",
    "severity": "error",
    "text": "Unexpected vendor-prefixed at-rule \\"@-webkit-keyframes\\" (at-rule-no-vendor-prefix)",
  },
  Object {
    "column": 1,
    "line": 62,
    "rule": "at-rule-property-requirelist",
    "severity": "error",
    "text": "Expected property \\"src\\" for at-rule \\"font-face\\" (at-rule-property-requirelist)",
  },
  Object {
    "column": 1,
    "line": 62,
    "rule": "at-rule-property-requirelist",
    "severity": "error",
    "text": "Expected property \\"font-display\\" for at-rule \\"font-face\\" (at-rule-property-requirelist)",
  },
  Object {
    "column": 21,
    "line": 70,
    "rule": "block-closing-brace-newline-before",
    "severity": "error",
    "text": "Expected newline before \\"}\\" (block-closing-brace-newline-before)",
  },
  Object {
    "column": 16,
    "line": 181,
    "rule": "block-closing-brace-newline-before",
    "severity": "error",
    "text": "Expected newline before \\"}\\" (block-closing-brace-newline-before)",
  },
  Object {
    "column": 20,
    "line": 182,
    "rule": "block-closing-brace-newline-before",
    "severity": "error",
    "text": "Expected newline before \\"}\\" (block-closing-brace-newline-before)",
  },
  Object {
    "column": 21,
    "line": 183,
    "rule": "block-closing-brace-newline-before",
    "severity": "error",
    "text": "Expected newline before \\"}\\" (block-closing-brace-newline-before)",
  },
  Object {
    "column": 31,
    "line": 185,
    "rule": "block-closing-brace-newline-before",
    "severity": "error",
    "text": "Expected newline before \\"}\\" (block-closing-brace-newline-before)",
  },
  Object {
    "column": 52,
    "line": 186,
    "rule": "block-closing-brace-newline-before",
    "severity": "error",
    "text": "Expected newline before \\"}\\" (block-closing-brace-newline-before)",
  },
  Object {
    "column": 53,
    "line": 188,
    "rule": "block-closing-brace-newline-before",
    "severity": "error",
    "text": "Expected newline before \\"}\\" (block-closing-brace-newline-before)",
  },
  Object {
    "column": 56,
    "line": 189,
    "rule": "block-closing-brace-newline-before",
    "severity": "error",
    "text": "Expected newline before \\"}\\" (block-closing-brace-newline-before)",
  },
  Object {
    "column": 54,
    "line": 190,
    "rule": "block-closing-brace-newline-before",
    "severity": "error",
    "text": "Expected newline before \\"}\\" (block-closing-brace-newline-before)",
  },
  Object {
    "column": 52,
    "line": 191,
    "rule": "block-closing-brace-newline-before",
    "severity": "error",
    "text": "Expected newline before \\"}\\" (block-closing-brace-newline-before)",
  },
  Object {
    "column": 60,
    "line": 192,
    "rule": "block-closing-brace-newline-before",
    "severity": "error",
    "text": "Expected newline before \\"}\\" (block-closing-brace-newline-before)",
  },
  Object {
    "column": 18,
    "line": 194,
    "rule": "block-closing-brace-newline-before",
    "severity": "error",
    "text": "Expected newline before \\"}\\" (block-closing-brace-newline-before)",
  },
  Object {
    "column": 8,
    "line": 74,
    "rule": "block-no-empty",
    "severity": "error",
    "text": "Unexpected empty block (block-no-empty)",
  },
  Object {
    "column": 10,
    "line": 72,
    "rule": "block-no-empty",
    "severity": "error",
    "text": "Unexpected empty block (block-no-empty)",
  },
  Object {
    "column": 29,
    "line": 178,
    "rule": "block-no-empty",
    "severity": "error",
    "text": "Unexpected empty block (block-no-empty)",
  },
  Object {
    "column": 35,
    "line": 179,
    "rule": "block-no-empty",
    "severity": "error",
    "text": "Unexpected empty block (block-no-empty)",
  },
  Object {
    "column": 4,
    "line": 70,
    "rule": "block-opening-brace-newline-after",
    "severity": "error",
    "text": "Expected newline after \\"{\\" (block-opening-brace-newline-after)",
  },
  Object {
    "column": 4,
    "line": 181,
    "rule": "block-opening-brace-newline-after",
    "severity": "error",
    "text": "Expected newline after \\"{\\" (block-opening-brace-newline-after)",
  },
  Object {
    "column": 4,
    "line": 182,
    "rule": "block-opening-brace-newline-after",
    "severity": "error",
    "text": "Expected newline after \\"{\\" (block-opening-brace-newline-after)",
  },
  Object {
    "column": 4,
    "line": 183,
    "rule": "block-opening-brace-newline-after",
    "severity": "error",
    "text": "Expected newline after \\"{\\" (block-opening-brace-newline-after)",
  },
  Object {
    "column": 4,
    "line": 185,
    "rule": "block-opening-brace-newline-after",
    "severity": "error",
    "text": "Expected newline after \\"{\\" (block-opening-brace-newline-after)",
  },
  Object {
    "column": 4,
    "line": 186,
    "rule": "block-opening-brace-newline-after",
    "severity": "error",
    "text": "Expected newline after \\"{\\" (block-opening-brace-newline-after)",
  },
  Object {
    "column": 7,
    "line": 188,
    "rule": "block-opening-brace-newline-after",
    "severity": "error",
    "text": "Expected newline after \\"{\\" (block-opening-brace-newline-after)",
  },
  Object {
    "column": 7,
    "line": 189,
    "rule": "block-opening-brace-newline-after",
    "severity": "error",
    "text": "Expected newline after \\"{\\" (block-opening-brace-newline-after)",
  },
  Object {
    "column": 7,
    "line": 190,
    "rule": "block-opening-brace-newline-after",
    "severity": "error",
    "text": "Expected newline after \\"{\\" (block-opening-brace-newline-after)",
  },
  Object {
    "column": 7,
    "line": 191,
    "rule": "block-opening-brace-newline-after",
    "severity": "error",
    "text": "Expected newline after \\"{\\" (block-opening-brace-newline-after)",
  },
  Object {
    "column": 7,
    "line": 192,
    "rule": "block-opening-brace-newline-after",
    "severity": "error",
    "text": "Expected newline after \\"{\\" (block-opening-brace-newline-after)",
  },
  Object {
    "column": 4,
    "line": 194,
    "rule": "block-opening-brace-newline-after",
    "severity": "error",
    "text": "Expected newline after \\"{\\" (block-opening-brace-newline-after)",
  },
  Object {
    "column": 21,
    "line": 91,
    "rule": "color-hex-length",
    "severity": "error",
    "text": "Expected \\"#ffffff\\" to be \\"#fff\\" (color-hex-length)",
  },
  Object {
    "column": 10,
    "line": 113,
    "rule": "color-named",
    "severity": "error",
    "text": "Unexpected named color \\"black\\" (color-named)",
  },
  Object {
    "column": 39,
    "line": 136,
    "rule": "color-named",
    "severity": "error",
    "text": "Unexpected named color \\"red\\" (color-named)",
  },
  Object {
    "column": 44,
    "line": 136,
    "rule": "color-named",
    "severity": "error",
    "text": "Unexpected named color \\"green\\" (color-named)",
  },
  Object {
    "column": 51,
    "line": 136,
    "rule": "color-named",
    "severity": "error",
    "text": "Unexpected named color \\"blue\\" (color-named)",
  },
  Object {
    "column": 12,
    "line": 145,
    "rule": "color-named",
    "severity": "error",
    "text": "Unexpected named color \\"red\\" (color-named)",
  },
  Object {
    "column": 12,
    "line": 194,
    "rule": "color-named",
    "severity": "error",
    "text": "Unexpected named color \\"pink\\" (color-named)",
  },
  Object {
    "column": 12,
    "line": 181,
    "rule": "color-no-invalid-hex",
    "severity": "error",
    "text": "Unexpected invalid hex color \\"#00\\" (color-no-invalid-hex)",
  },
  Object {
    "column": 12,
    "line": 182,
    "rule": "color-no-invalid-hex",
    "severity": "error",
    "text": "Unexpected invalid hex color \\"#fff1az\\" (color-no-invalid-hex)",
  },
  Object {
    "column": 12,
    "line": 183,
    "rule": "color-no-invalid-hex",
    "severity": "error",
    "text": "Unexpected invalid hex color \\"#12345aa\\" (color-no-invalid-hex)",
  },
  Object {
    "column": 1,
    "line": 109,
    "rule": "comment-no-empty",
    "severity": "error",
    "text": "Unexpected empty comment (comment-no-empty)",
  },
  Object {
    "column": 4,
    "line": 109,
    "rule": "comment-whitespace-inside",
    "severity": "error",
    "text": "Expected whitespace after \\"/*\\" (comment-whitespace-inside)",
  },
  Object {
    "column": 1,
    "line": 109,
    "rule": "comment-whitespace-inside",
    "severity": "error",
    "text": "Expected whitespace before \\"*/\\" (comment-whitespace-inside)",
  },
  Object {
    "column": 20,
    "line": 70,
    "rule": "declaration-block-trailing-semicolon",
    "severity": "error",
    "text": "Expected a trailing semicolon (declaration-block-trailing-semicolon)",
  },
  Object {
    "column": 13,
    "line": 124,
    "rule": "declaration-block-trailing-semicolon",
    "severity": "error",
    "text": "Expected a trailing semicolon (declaration-block-trailing-semicolon)",
  },
  Object {
    "column": 12,
    "line": 140,
    "rule": "declaration-block-trailing-semicolon",
    "severity": "error",
    "text": "Expected a trailing semicolon (declaration-block-trailing-semicolon)",
  },
  Object {
    "column": 3,
    "line": 86,
    "rule": "declaration-empty-line-before",
    "severity": "error",
    "text": "Unexpected empty line before declaration (declaration-empty-line-before)",
  },
  Object {
    "column": 45,
    "line": 186,
    "rule": "font-family-no-missing-generic-family-keyword",
    "severity": "error",
    "text": "Unexpected missing generic font family (font-family-no-missing-generic-family-keyword)",
  },
  Object {
    "column": 17,
    "line": 63,
    "rule": "font-family-name-quotes",
    "severity": "error",
    "text": "Unexpected quotes around \\"MyFont\\" (font-family-name-quotes)",
  },
  Object {
    "column": 25,
    "line": 185,
    "rule": "font-family-no-duplicate-names",
    "severity": "error",
    "text": "Unexpected duplicate name serif (font-family-no-duplicate-names)",
  },
  Object {
    "column": 36,
    "line": 188,
    "rule": "function-linear-gradient-no-nonstandard-direction",
    "severity": "error",
    "text": "Unexpected nonstandard direction (function-linear-gradient-no-nonstandard-direction)",
  },
  Object {
    "column": 36,
    "line": 189,
    "rule": "function-linear-gradient-no-nonstandard-direction",
    "severity": "error",
    "text": "Unexpected nonstandard direction (function-linear-gradient-no-nonstandard-direction)",
  },
  Object {
    "column": 36,
    "line": 190,
    "rule": "function-linear-gradient-no-nonstandard-direction",
    "severity": "error",
    "text": "Unexpected nonstandard direction (function-linear-gradient-no-nonstandard-direction)",
  },
  Object {
    "column": 36,
    "line": 191,
    "rule": "function-linear-gradient-no-nonstandard-direction",
    "severity": "error",
    "text": "Unexpected nonstandard direction (function-linear-gradient-no-nonstandard-direction)",
  },
  Object {
    "column": 36,
    "line": 192,
    "rule": "function-linear-gradient-no-nonstandard-direction",
    "severity": "error",
    "text": "Unexpected nonstandard direction (function-linear-gradient-no-nonstandard-direction)",
  },
  Object {
    "column": 15,
    "line": 136,
    "rule": "function-name-case",
    "severity": "error",
    "text": "Expected \\"-WEBKIT-RADIAL-GRADIENT\\" to be \\"-webkit-radial-gradient\\" (function-name-case)",
  },
  Object {
    "column": 9,
    "line": 161,
    "rule": "length-zero-no-unit",
    "severity": "error",
    "text": "Unexpected unit (length-zero-no-unit)",
  },
  Object {
    "column": 20,
    "line": 143,
    "rule": "media-feature-name-blacklist",
    "severity": "error",
    "text": "Unexpected media feature name \\"max-device-width\\" (media-feature-name-blacklist)",
  },
  Object {
    "column": 20,
    "line": 149,
    "rule": "media-feature-name-blacklist",
    "severity": "error",
    "text": "Unexpected media feature name \\"MIN-DEVICE-ASPECT-RATIO\\" (media-feature-name-blacklist)",
  },
  Object {
    "column": 20,
    "line": 149,
    "rule": "media-feature-name-case",
    "severity": "error",
    "text": "Expected \\"MIN-DEVICE-ASPECT-RATIO\\" to be \\"min-device-aspect-ratio\\" (media-feature-name-case)",
  },
  Object {
    "column": 20,
    "line": 178,
    "rule": "media-feature-name-no-unknown",
    "severity": "error",
    "text": "Unexpected unknown media feature name \\"unknown\\" (media-feature-name-no-unknown)",
  },
  Object {
    "column": 20,
    "line": 179,
    "rule": "media-feature-name-no-unknown",
    "severity": "error",
    "text": "Unexpected unknown media feature name \\"unknown\\" (media-feature-name-no-unknown)",
  },
  Object {
    "column": 1,
    "line": 70,
    "rule": "no-duplicate-selectors",
    "severity": "error",
    "text": "Unexpected duplicate selector \\"a\\", first used at line 66 (no-duplicate-selectors)",
  },
  Object {
    "column": 1,
    "line": 94,
    "rule": "no-duplicate-selectors",
    "severity": "error",
    "text": "Unexpected duplicate selector \\"a\\", first used at line 66 (no-duplicate-selectors)",
  },
  Object {
    "column": 1,
    "line": 112,
    "rule": "no-duplicate-selectors",
    "severity": "error",
    "text": "Unexpected duplicate selector \\"a\\", first used at line 66 (no-duplicate-selectors)",
  },
  Object {
    "column": 1,
    "line": 116,
    "rule": "no-duplicate-selectors",
    "severity": "error",
    "text": "Unexpected duplicate selector \\"a\\", first used at line 66 (no-duplicate-selectors)",
  },
  Object {
    "column": 1,
    "line": 135,
    "rule": "no-duplicate-selectors",
    "severity": "error",
    "text": "Unexpected duplicate selector \\"a\\", first used at line 66 (no-duplicate-selectors)",
  },
  Object {
    "column": 1,
    "line": 139,
    "rule": "no-duplicate-selectors",
    "severity": "error",
    "text": "Unexpected duplicate selector \\"a\\", first used at line 66 (no-duplicate-selectors)",
  },
  Object {
    "column": 1,
    "line": 160,
    "rule": "no-duplicate-selectors",
    "severity": "error",
    "text": "Unexpected duplicate selector \\"a\\", first used at line 66 (no-duplicate-selectors)",
  },
  Object {
    "column": 1,
    "line": 181,
    "rule": "no-duplicate-selectors",
    "severity": "error",
    "text": "Unexpected duplicate selector \\"a\\", first used at line 66 (no-duplicate-selectors)",
  },
  Object {
    "column": 1,
    "line": 182,
    "rule": "no-duplicate-selectors",
    "severity": "error",
    "text": "Unexpected duplicate selector \\"a\\", first used at line 66 (no-duplicate-selectors)",
  },
  Object {
    "column": 1,
    "line": 183,
    "rule": "no-duplicate-selectors",
    "severity": "error",
    "text": "Unexpected duplicate selector \\"a\\", first used at line 66 (no-duplicate-selectors)",
  },
  Object {
    "column": 1,
    "line": 185,
    "rule": "no-duplicate-selectors",
    "severity": "error",
    "text": "Unexpected duplicate selector \\"a\\", first used at line 66 (no-duplicate-selectors)",
  },
  Object {
    "column": 1,
    "line": 186,
    "rule": "no-duplicate-selectors",
    "severity": "error",
    "text": "Unexpected duplicate selector \\"a\\", first used at line 66 (no-duplicate-selectors)",
  },
  Object {
    "column": 1,
    "line": 189,
    "rule": "no-duplicate-selectors",
    "severity": "error",
    "text": "Unexpected duplicate selector \\".foo\\", first used at line 188 (no-duplicate-selectors)",
  },
  Object {
    "column": 1,
    "line": 190,
    "rule": "no-duplicate-selectors",
    "severity": "error",
    "text": "Unexpected duplicate selector \\".foo\\", first used at line 188 (no-duplicate-selectors)",
  },
  Object {
    "column": 1,
    "line": 191,
    "rule": "no-duplicate-selectors",
    "severity": "error",
    "text": "Unexpected duplicate selector \\".foo\\", first used at line 188 (no-duplicate-selectors)",
  },
  Object {
    "column": 1,
    "line": 192,
    "rule": "no-duplicate-selectors",
    "severity": "error",
    "text": "Unexpected duplicate selector \\".foo\\", first used at line 188 (no-duplicate-selectors)",
  },
  Object {
    "column": 1,
    "line": 194,
    "rule": "no-duplicate-selectors",
    "severity": "error",
    "text": "Unexpected duplicate selector \\"a\\", first used at line 66 (no-duplicate-selectors)",
  },
  Object {
    "column": 9,
    "line": 194,
    "rule": "no-extra-semicolons",
    "severity": "error",
    "text": "Unexpected extra semicolon (no-extra-semicolons)",
  },
  Object {
    "column": 14,
    "line": 95,
    "rule": "no-unknown-animations",
    "severity": "error",
    "text": "Unexpected unknown animation name \\"slip-n-slide\\" (no-unknown-animations)",
  },
  Object {
    "column": 8,
    "line": 67,
    "rule": "number-leading-zero",
    "severity": "error",
    "text": "Expected a leading zero (number-leading-zero)",
  },
  Object {
    "column": 10,
    "line": 122,
    "rule": "number-leading-zero",
    "severity": "error",
    "text": "Expected a leading zero (number-leading-zero)",
  },
  Object {
    "column": 8,
    "line": 156,
    "rule": "number-max-precision",
    "severity": "error",
    "text": "Expected \\"3.24563412312312\\" to be \\"3.24563412\\" (number-max-precision)",
  },
  Object {
    "column": 11,
    "line": 121,
    "rule": "number-no-trailing-zeros",
    "severity": "error",
    "text": "Unexpected trailing zero(s) (number-no-trailing-zeros)",
  },
  Object {
    "column": 3,
    "line": 140,
    "rule": "property-case",
    "severity": "error",
    "text": "Expected \\"WIDTH\\" to be \\"width\\" (property-case)",
  },
  Object {
    "column": 5,
    "line": 70,
    "rule": "property-no-unknown",
    "severity": "error",
    "text": "Unexpected unknown property \\"unknown\\" (property-no-unknown)",
  },
  Object {
    "column": 1,
    "line": 75,
    "rule": "rule-empty-line-before",
    "severity": "error",
    "text": "Expected empty line before rule (rule-empty-line-before)",
  },
  Object {
    "column": 1,
    "line": 78,
    "rule": "rule-empty-line-before",
    "severity": "error",
    "text": "Expected empty line before rule (rule-empty-line-before)",
  },
  Object {
    "column": 1,
    "line": 182,
    "rule": "rule-empty-line-before",
    "severity": "error",
    "text": "Expected empty line before rule (rule-empty-line-before)",
  },
  Object {
    "column": 1,
    "line": 183,
    "rule": "rule-empty-line-before",
    "severity": "error",
    "text": "Expected empty line before rule (rule-empty-line-before)",
  },
  Object {
    "column": 1,
    "line": 186,
    "rule": "rule-empty-line-before",
    "severity": "error",
    "text": "Expected empty line before rule (rule-empty-line-before)",
  },
  Object {
    "column": 1,
    "line": 189,
    "rule": "rule-empty-line-before",
    "severity": "error",
    "text": "Expected empty line before rule (rule-empty-line-before)",
  },
  Object {
    "column": 1,
    "line": 190,
    "rule": "rule-empty-line-before",
    "severity": "error",
    "text": "Expected empty line before rule (rule-empty-line-before)",
  },
  Object {
    "column": 1,
    "line": 191,
    "rule": "rule-empty-line-before",
    "severity": "error",
    "text": "Expected empty line before rule (rule-empty-line-before)",
  },
  Object {
    "column": 1,
    "line": 192,
    "rule": "rule-empty-line-before",
    "severity": "error",
    "text": "Expected empty line before rule (rule-empty-line-before)",
  },
  Object {
    "column": 2,
    "line": 170,
    "rule": "selector-pseudo-class-no-unknown",
    "severity": "error",
    "text": "Unexpected unknown pseudo-class selector \\":unknown\\" (selector-pseudo-class-no-unknown)",
  },
  Object {
    "column": 2,
    "line": 174,
    "rule": "selector-pseudo-element-no-unknown",
    "severity": "error",
    "text": "Unexpected unknown pseudo-element selector \\"::unknown\\" (selector-pseudo-element-no-unknown)",
  },
  Object {
    "column": 1,
    "line": 155,
    "rule": "selector-type-no-unknown",
    "severity": "error",
    "text": "Unexpected unknown type selector \\"number\\" (selector-type-no-unknown)",
  },
  Object {
    "column": 12,
    "line": 132,
    "rule": "string-quotes",
    "severity": "error",
    "text": "Expected double quotes (string-quotes)",
  },
  Object {
    "column": 27,
    "line": 95,
    "rule": "time-min-milliseconds",
    "severity": "error",
    "text": "Expected a minimum of 100 milliseconds (time-min-milliseconds)",
  },
  Object {
    "column": 11,
    "line": 100,
    "rule": "unit-blacklist",
    "severity": "error",
    "text": "Unexpected unit \\"in\\" (unit-blacklist)",
  },
  Object {
    "column": 27,
    "line": 95,
    "rule": "unit-case",
    "severity": "error",
    "text": "Expected \\"MS\\" to be \\"ms\\" (unit-case)",
  },
  Object {
    "column": 32,
    "line": 95,
    "rule": "value-keyword-case",
    "severity": "error",
    "text": "Expected \\"LINEAR\\" to be \\"linear\\" (value-keyword-case)",
  },
  Object {
    "column": 12,
    "line": 117,
    "rule": "value-no-vendor-prefix",
    "severity": "error",
    "text": "Unexpected vendor-prefix \\"-webkit-flex\\" (value-no-vendor-prefix)",
  },
  Object {
    "column": 15,
    "line": 136,
    "rule": "value-no-vendor-prefix",
    "severity": "error",
    "text": "Unexpected vendor-prefix \\"-WEBKIT-RADIAL-GRADIENT\\" (value-no-vendor-prefix)",
  },
]
`;
